--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,21 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="w-ful relative bg-gray-50">
+      <% if user_signed_in? %>
+        <%# todo: Move partial %>
+        <nav class="bg-yellow-300 shadow">
+          <div class='max-w-7xl mx-auto px-4 sm:px-6 lg:px-8'>
+            <div class='h-16 flex justify-between'>
+              Navigation
+            </div>
+          </div>
+        </nav>
+        <%# todo: Move partial %>
+      <% end %>
+      <div class="max-w-7xl mx-auto shadow-2xl">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
