✨ Add update profile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         </nav>
         <%# todo: Move partial %>
       <% end %>
-      <div class="max-w-7xl mx-auto shadow-2xl">
+      <div class="max-w-7xl mx-auto">
         <%= yield %>
       </div>
     </div>
