--- a/app/views/shared/_page_heading.html.erb
+++ b/app/views/shared/_page_heading.html.erb
@@ -8,7 +8,7 @@
     <div class='mt-4 flex-shrink-0 flex md:mt-0 md:ml-4'>
       <%= link_to( local_assigns[:action_button][:name],
                  local_assigns[:action_button][:path],
-                 { class: 'inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500' }) %>
+                 { class: 'inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-app-pink focus:ring-opacity-50' }) %>
     </div>
   <% end %>
 </div>
