--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,28 +1,28 @@
 <div class='px-4 py-6'>
   <%= render( partial: 'shared/page_heading',
-              locals: { title: 'Editar nueva' } ) %>
-  <div class='md:grid md:grid-cols-3 md:gap-6'>
-    <div class='md:col-span-1'>
-      <div class='px-4 sm:px-0'>
-        <h3 class='text- font-medium leading-6 text-gray-900'>
-          Información de la cuenta
-        </h3>
-        <p class="mt-1 text-sm text-gray-600">
-          Edita una cuenta que tienes registrada, donde las demas personas puedan agradecerte monetariamente.
-        </p>
+              locals: { title: 'Editar cuenta' } ) %>
+  <%= form_with(model: @account, local: true, id: 'edit-account') do |f| %>
+    <div class='md:grid md:grid-cols-3 md:gap-6'>
+      <div class='md:col-span-1'>
+        <div class='px-4 sm:px-0'>
+          <h3 class='text- font-medium leading-6 text-gray-900'>
+            Información de la cuenta
+          </h3>
+          <p class="mt-1 text-sm text-gray-600">
+            Edita una cuenta que tienes registrada, donde las demas personas puedan agradecerte monetariamente.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class='mt-5 md:mt-0 md:col-span-2'>
-      <%= form_with(model: @account, local: true, id: 'edit-account') do |f| %>
+        <div class='mt-5 md:mt-0 md:col-span-2'>
         <div class='shadow overflow-hidden sm:rounded-md'>
           <div class='px-4 py-5 bg-white sm:p-6'>
             <div class='grid grid-cols-6 gap-6'>
               <div class='col-span-6 sm:col-span-4'>
-                <%= f.label :bank, { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.label :bank, 'Banco', { class: 'block text-sm font-medium text-gray-700' } %>
                 <%= f.collection_select :bank_id, Bank.all, :id, :name, { prompt: true }, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block block w-full shadow-sm sm:text-sm border-gray-300 rounded-md' } %>
               </div>
               <div class='col-span-6 sm:col-span-4'>
-                <%= f.label :kind, { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.label :kind, 'Tipo de cuenta', { class: 'block text-sm font-medium text-gray-700' } %>
                 <%= f.select(:kind,
                              Account.kinds.keys.map { |kind| [kind, kind] },
                              { prompt: true },
@@ -33,20 +33,27 @@
                 <%= f.text_field :email, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Correo', required: true } %>
               </div>
               <div class='col-span-6'>
-                <%=  f.label :number, { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :number, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Nro de cuenta', required: true } %>
+                <%=  f.label :number, 'Número de la cuenta', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :number, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Número de cuenta', required: true } %>
               </div>
               <div class='col-span-6'>
-                <%=  f.label :dni, { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :dni, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'DNI', required: true } %>
+                <%=  f.label :dni, 'Documento de identidad', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :dni, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Documento de identidad', required: true } %>
               </div>
-            </div>
-            <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
-              <%= f.submit('Actualizar cuenta', { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
             </div>
           </div>
         </div>
-      <% end %>
+      </div>
     </div>
-  </div>
+    <div class="hidden sm:block">
+      <div class="py-5">
+        <div class="border-t border-gray-200">
+        </div>
+      </div>
+    </div>
+
+    <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
+      <%= f.submit('Actualizar', { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
+    </div>
+  <% end %>
 </div>
