--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,38 +1,55 @@
 <div class='container mx-auto px-4 py-6'>
   <%= render( partial: 'shared/page_heading',
               locals: { title: 'Cuentas',
-                        action_button: { name: 'Nueva cuenta',
+                        action_button: { name: 'Agregar',
                                          path: new_user_account_path(@user) } } ) %>
-  <div class='bg-white shadow overflow-hidden sm:rounded-md'>
+  <div class='bg-white shadow sm:rounded-md'>
     <%- if @accounts.exists? %>
       <ul class='divide-y divide-gray-200'>
         <%- @accounts.each do |account| %>
           <li>
-            <%= link_to(edit_account_path(account), { class: ' block hover:bg-gray-50' }) do %>
-              <div class='px-4 py-4 sm:px-6'>
-                <div class='flex items-center justify-between'>
-                  <p class='text-sm font-medium text-indigo-600 truncate'>
+            <div class='px-4 py-4 sm:px-6'>
+              <div class="w-full flex justify-between items-center">
+                <div class=" flex min-w-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="text-gray-500 h-5 w-5 mr-1.5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 14v3m4-3v3m4-3v3M3 21h18M3 10h18M3 7l9-4 9 4M4 10h16v11H4V10z" />
+                  </svg>
+                  <p class="truncate">
                     <%= account.bank.name %>
                   </p>
-                  <div class='ml-2 flex-shrink-0 flex'>
-                    <p class='px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800'>
-                      <%= account.kind %>
-                    </p>
-                  </div>
                 </div>
-                <div class='mt-2 sm:flex sm:justify-between'>
-                  <div class='sm:flex'>
-                    <p class='flex items-center text-sm text-gray-500'>
-                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1.5" viewBox="0 0 20 20" fill="currentColor">
-                        <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
-                        <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
-                      </svg>
-                      <%= account.email %>
-                    </p>
-                  </div>
+
+                <div class="flex min-w-0 flex-shrink-0">
+                  <%= react_component("dropdown",
+                                      { options: [{path: edit_account_path(account), label: 'Editar'},
+                                                  { path: account_path(account), label: 'Eliminar', method: :delete, confirm: '¿Está seguro que desea eliminar esta cuenta?' }]}
+                                     ) %>
+
                 </div>
               </div>
-            <% end %>
+              <div class="mt-2 sm:flex sm:justify-between">
+                <div class="sm:flex">
+                  <p class="flex items-center text-sm text-gray-500">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1.5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                    </svg>
+                    <%= account.email %>
+                  </p>
+                  <p class="mt-2 flex items-center text-sm text-gray-500 sm:mt-0 sm:ml-6">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V8a2 2 0 00-2-2h-5m-4 0V5a2 2 0 114 0v1m-4 0a2 2 0 104 0m-5 8a2 2 0 100-4 2 2 0 000 4zm0 0c1.306 0 2.417.835 2.83 2M9 14a3.001 3.001 0 00-2.83 2M15 11h3m-3 4h2" />
+                    </svg>
+                    <%= account.dni %>
+                  </p>
+                </div>
+                <p class="mt-2 flex items-center text-sm text-gray-500 sm:mt-0">
+                  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 20l4-16m2 16l4-16M6 9h14M4 15h14" />
+                  </svg>
+                  <%= account.number %>
+                </p>
+              </div>
+            </div>
           </li>
         <% end %>
       </ul>
