--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,24 +1,25 @@
 <div class='container mx-auto px-4 py-6'>
   <%= render( partial: 'shared/page_heading',
               locals: { title: 'Perfil' } ) %>
-  <div class='md:grid md:grid-cols-3 md:gap-6'>
-    <div class='md:col-span-1'>
-      <div class='px-4 sm:px-0'>
-        <h3 class='text- font-medium leading-6 text-gray-900'>
-          Usuario
-        </h3>
-        <p class="mt-1 text-sm text-gray-600">
-          Datos generales
-        </p>
+  <%= form_with(model: [@profile.user, @profile], local: true) do |f| %>
+    <div class='md:grid md:grid-cols-3 md:gap-6'>
+      <div class='md:col-span-1'>
+        <div class='px-4 sm:px-0'>
+          <h3 class='text- font-medium leading-6 text-gray-900'>
+            Datos generales
+          </h3>
+          <p class="mt-1 text-sm text-gray-600">
+            Agrega datos generales para que te conozcan mejor.
+          </p>
+        </div>
       </div>
-    </div>
-    <div class='mt-5 md:mt-0 md:col-span-2'>
-      <%= form_with(scope: :profile, url: user_profile_path(@profile.user_id), method: :patch, local: true, multipart: true, id: 'new-account') do |f| %>
+
+      <div class='mt-5 md:mt-0 md:col-span-2'>
         <div class='shadow overflow-hidden sm:rounded-md'>
           <div class='px-4 py-5 bg-white sm:p-6'>
             <div class='grid grid-cols-6 gap-6'>
               <div class='col-span-6'>
-                <%= f.label :full_name, { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.label :full_name, 'Nombre completo', { class: 'block text-sm font-medium text-gray-700' } %>
                 <%= f.text_field :full_name, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md',
                                           placeholder: 'Nombre completo',
                                           required: true } %>
@@ -33,12 +34,47 @@
               </div>
             </div>
           </div>
-          <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
-            <%= f.submit('Actualizar',{ class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-primary-light focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-light cursor-pointer', data: { disable_with: 'Espere...' }}) %>
+        </div>
+      </div>
+    </div>
+
+    <div class="hidden sm:block">
+      <div class="py-5">
+        <div class="border-t border-gray-200">
+        </div>
+      </div>
+    </div>
+
+    <div class='md:grid md:grid-cols-3 md:gap-6'>
+      <div class='md:col-span-1'>
+        <div class='px-4 sm:px-0'>
+          <h3 class='text- font-medium leading-6 text-gray-900'>
+            Imagen del perfil
+          </h3>
+          <p class="mt-1 text-sm text-gray-600">
+            Agrega una imagen que identifique tu perfil.
+          </p>
+        </div>
+      </div>
+
+      <div class='mt-5 md:mt-0 md:col-span-2'>
+        <div class='shadow overflow-hidden sm:rounded-md'>
+          <div class='px-4 py-5 bg-white sm:p-6'>
+            <div class='grid grid-cols-6 gap-6'>
+              <div class='col-span-6'>
+              <%# rails_blob_url(f.object.file) %>
+                <%= f.label :image, 'Imagen del perfil', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= react_component("formImage/", { name: "profile[image]",
+                                                   imagesFile: [f.object.image&.blob&.signed_id].compact }) %>
+              </div>
+            </div>
           </div>
         </div>
-
-      <% end %>
+      </div>
     </div>
-  </div>
+
+    <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
+      <%= f.submit('Actualizar', { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
+    </div>
+  <% end %>
 </div> 
