💄 Fix style fonts views

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="w-40 my-4 md:w-44">
     <%= image_pack_tag('coffees.svg', class: 'w-full') %>
   </div>
-  <h3 class="mb-3 text-center text-xl md:text-2xl">
+  <h3 class="mb-3 text-center text-xl font-happy-monkey md:text-2xl">
     Un café es un abrazo atrapado en una taza
   </h3>
   <h5 class="mb-6 text-gray-400 text-center text-lg md:text-xl">
