--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,7 +3,7 @@
     <%= @profile.biography %>
   </div>
   <div class="w-full mt-4">
-    <%= react_component('imagesCarrousel/', { imagesData: data_images(@profile.user) }) %>
+    <%= react_component('imagesCarousel/', { imagesData: data_images(@profile.user) }) %>
   </div>
 
   <div class="flex justify-center mt-8">
@@ -11,5 +11,4 @@
                 new_user_acknowledgment_path(@profile.user),
                 class: 'w-full sm:max-w-md md:max-w-2xl  inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer') %>
   </div>
-
 </div>
