--- a/app/views/layouts/without_signed_in.html.erb
+++ b/app/views/layouts/without_signed_in.html.erb
@@ -19,14 +19,14 @@
             <div class="col-span-6 md:col-span-4">
               <div class="w-full h-full flex items-center">
                 <div class="flex-shrink-0 min-w-0">
-                  <%= image_tag(@profile.image, class: 'h-10 w-10 bg-white border border-red-700 rounded-full') %>
+                  <%= image_tag(@user.profile.image, class: 'h-10 w-10 bg-white border border-red-700 rounded-full') %>
                 </div>
                 <div class="ml-3 min-w-0">
                   <p class="text-base font-medium text-gray-800 truncate">
-                    <%= @profile.full_name %>
+                    <%= @user.profile.full_name %>
                   </p>
                   <p class="text-base font-light text-gray-400 truncate">
-                    <%= @profile.occupation %>
+                    <%= @user.profile.occupation %>
                   </p>
                 </div>
               </div>
@@ -43,7 +43,7 @@
       </header>
       <%# end header %>
       <div class="mt-16 max-w-7xl mx-auto">
-        <div class="grid grid-cols-12 gap-1 px-4 md:px-10">
+        <div class="grid grid-cols-12 gap-1 p-4">
           <main class="col-span-full">
             <%= yield %>
           </main>
