--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -73,6 +73,46 @@
       </div>
     </div>
 
+    <div class="hidden sm:block">
+      <div class="py-5">
+        <div class="border-t border-gray-200">
+        </div>
+      </div>
+    </div>
+
+    <div class='md:grid md:grid-cols-3 md:gap-6'>
+      <div class='md:col-span-1'>
+        <div class='px-4 sm:px-0'>
+          <h3 class='text- font-medium leading-6 text-gray-900'>
+            Valor del café a recibir
+          </h3>
+          <p class="mt-1 text-sm text-gray-600">
+            Configure el valor del café que recibira como reconocimiento.
+          </p>
+        </div>
+      </div>
+
+      <div class='mt-5 md:mt-0 md:col-span-2'>
+        <div class='shadow overflow-hidden sm:rounded-md'>
+          <div class='px-4 py-5 bg-white sm:p-6'>
+            <div class='grid grid-cols-6 gap-6'>
+              <div class="col-span-6 sm:col-span-4">
+                <%= f.label :amount_coffee, 'Monto del café', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.number_field :amount_coffee, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md',
+                                          placeholder: 'Monto del café',
+                                          required: true } %>
+              </div>
+              <div class="col-span-6 sm:col-span-4">
+                <%=  f.label :currency_symbol, 'Simbolo del la moneda', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :currency_symbol, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Simbolo del la moneda', required: true } %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
       <%= f.submit('Actualizar', { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
     </div>
