--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
                             ]
                           }
                          ) if user_signed_in? %>
+      <%= react_component('alerts', alerts: flash) if flash.present? %>
       <div class="mt-16 max-w-7xl mx-auto">
         <div class="grid grid-cols-12 gap-1">
           <%= render partial: 'shared/sidebar' if user_signed_in? %>
