✨ Add empty state on indexes

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -53,6 +53,8 @@
           </li>
         <% end %>
       </ul>
+    <% else %>
+      <%= render partial: 'shared/empty_state_list' %>
     <% end %>
   </div>
 </div>
