--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -32,6 +32,8 @@
           </li>
         <% end %>
       </ul>
+    <% else %>
+      <%= render partial: 'shared/empty_state_list' %>
     <% end %>
   </div>
 </div>
