--- a/app/views/layouts/no_login.html.erb
+++ b/app/views/layouts/no_login.html.erb
@@ -12,36 +12,7 @@
 
   <body>
     <div class="bg-gray-50 font-roboto">
-      <%# start header %>
-      <header class="w-full h-16 fixed top-0 z-10 bg-white shadow-md">
-        <div class="max-w-7xl mx-auto">
-          <div class="grid grid-cols-12 gap-1 px-4 h-16">
-            <div class="col-span-6 md:col-span-4">
-              <div class="w-full h-full flex items-center">
-                <div class="flex-shrink-0 min-w-0">
-                  <%= image_tag(@user.profile.image, class: 'h-10 w-10 bg-white border border-red-700 rounded-full') %>
-                </div>
-                <div class="ml-3 min-w-0">
-                  <p class="text-base font-medium text-gray-800 truncate">
-                    <%= @user.profile.full_name %>
-                  </p>
-                  <p class="text-base font-light text-gray-400 truncate">
-                    <%= @user.profile.occupation %>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-start-10 col-end-13">
-              <div class="h-full flex items-center justify-end">
-                <div class="w-16 h-10 flex items-center justify-center rounded-md bg-app-pink font-happy-monkey text-white md:h-11">
-                  H&C
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </header>
-      <%# end header %>
+      <%= render partial: 'shared/navbar_no_login', locals: {user: @user} %>
       <div class="mt-16 max-w-7xl mx-auto">
         <div class="grid grid-cols-12 gap-1 p-4">
           <main class="col-span-full">
