--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,16 +1,16 @@
 <div class='container mx-auto px-4 py-6'>
   <%= render( partial: 'shared/page_heading',
-              locals: { title: 'Cuenta nueva' } ) %>
+              locals: { title: 'New account' } ) %>
 
   <%= form_with(model: [@account.user, @account], local: true, id: 'new-account') do |f| %>
     <div class='md:grid md:grid-cols-3 md:gap-6'>
       <div class='md:col-span-1'>
         <div class='px-4 sm:px-0'>
           <h3 class='text- font-medium leading-6 text-gray-900'>
-            Información de la cuenta
+            Account information
           </h3>
           <p class="mt-1 text-sm text-gray-600">
-            Crear una cuenta donde las demas personas puedan agradecerte monetariamente.
+            Create an account where other people can thank you monetarily.
           </p>
         </div>
       </div>
@@ -20,11 +20,11 @@
           <div class='px-4 py-5 bg-white sm:p-6'>
             <div class='grid grid-cols-6 gap-6'>
               <div class='col-span-6 sm:col-span-4'>
-                <%= f.label :bank, 'Banco', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.label :bank, 'Bank entity', { class: 'block text-sm font-medium text-gray-700' } %>
                 <%= f.collection_select :bank_id, Bank.all, :id, :name, { prompt: true }, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md' } %>
               </div>
               <div class='col-span-6 sm:col-span-4'>
-                <%= f.label :kind, 'Tipo de cuenta', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.label :kind, 'Account type', { class: 'block text-sm font-medium text-gray-700' } %>
                 <%= f.select(:kind,
                              Account.kinds.keys.map { |kind| [kind, kind] },
                              { prompt: true },
@@ -32,15 +32,15 @@
               </div>
               <div class='col-span-6'>
                 <%=  f.label :email, { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :email, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Correo', required: true } %>
+                <%= f.text_field :email, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Email', required: true } %>
               </div>
               <div class='col-span-6'>
-                <%=  f.label :number, 'Número de la cuenta', { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :number, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Número de cuenta', required: true } %>
+                <%=  f.label :number, 'Account number', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :number, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Enter account number', required: true } %>
               </div>
               <div class='col-span-6'>
-                <%=  f.label :dni, 'Documento de identidad', { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :dni, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Documento de identidad', required: true } %>
+                <%=  f.label :dni, 'DNI', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :dni, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'DNI', required: true } %>
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@
     </div>
 
     <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
-      <%= f.submit('Crear', { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
+      <%= f.submit(nil, { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Wait...' } }) %>
     </div>
   <% end %>
 </div>
