--- a/app/views/acknowledgments/new.html.erb
+++ b/app/views/acknowledgments/new.html.erb
@@ -1,27 +1,27 @@
-<div class="w-full h-full min-h-screen-without-navbar">
+<div class="w-full h-full min-h-screen-without-navbar py-4">
   <%= link_to((request.referer.present? ? request.referer : root_path),
               class: 'flex text-gray-700') do %>
     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
     </svg>
-    <span>Atras</span>
+    <span>Back</span>
   <% end %>
 
   <h3 class="mt-4 font-bold text-center">
-    <%= "Formas de reconocer a #{@user.profile.first_name}" %>
+    <%= "Ways to recognize #{@user.profile.first_name.capitalize}" %>
   </h3>
 
   <div class="mt-8 flex w-full lg:mt-14">
     <div class="flex-1 flex justify-center">
       <%= link_to(new_user_coffee_path(@user), class: 'p-4 w-2/5 flex flex-col justify-between items-center max-w-32 bg-white shadow-md sm:px-8') do %>
           <%= image_pack_tag('coffee.svg', class: 'w-full my-auto') %>
-          <p class="mt-3">Cafe</p>
+          <p class="mt-3">Coffee</p>
       <% end %>
     </div>
     <div class="flex-1 flex justify-center">
       <div class="p-4 w-2/5 flex flex-col justify-between items-center max-w-32 bg-white shadow-md sm:px-8">
         <%= image_pack_tag('heart.svg', class: 'w-full my-auto') %>
-        <p class="mt-3">Abrazo</p>
+        <p class="mt-3">Hug</p>
       </div>
     </div>
   </div>
