--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class='min-h-screen flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8'>
+<div class="min-h-screen-without-navbar flex items-center justify-center bg-gray-50 py-12 px-4 sm:px-6 lg:px-8">
   <div class='max-w-md w-full space-y-8'>
     <div>
       <div class='flex justify-center'>
@@ -7,7 +7,7 @@
         </div>
       </div>
       <h2 class='mt-6 text-center text-3xl font-extrabold text-gray-900'>
-        Registro de usuario
+        Sign Up
       </h2>
     </div>
 
@@ -15,20 +15,20 @@
       <div class='rounded-md shadow-sm -space-y-px'>
         <div>
           <%= f.label :email, class: 'sr-only' %>
-          <%= f.text_field :email, class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-app-pink focus:border-app-pink focus:z-10 sm:text-sm', placeholder: 'Correo', required: true, autofocus: true, autocomplete: 'email' %>
+          <%= f.text_field :email, class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-app-pink focus:border-app-pink focus:z-10 sm:text-sm', placeholder: 'Email', required: true, autofocus: true, autocomplete: 'email' %>
         </div>
         <div>
           <%= f.label :password, class: 'sr-only' %>
-          <%= f.password_field :password, autocomplete: 'current-password', class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-app-pink focus:border-app-pink focus:z-10 sm:text-sm', placeholder: 'Contraseña' %>
+          <%= f.password_field :password, autocomplete: 'current-password', class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-app-pink focus:border-app-pink focus:z-10 sm:text-sm', placeholder: 'Password' %>
         </div>
         <div>
           <%= f.label :password_confirmation, class: 'sr-only' %>
-          <%= f.password_field :password_confirmation, class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-app-pink focus:border-app-pink focus:z-10 sm:text-sm', placeholder: 'Confirmacion de contraseña' %>
+          <%= f.password_field :password_confirmation, class: 'appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-b-md focus:outline-none focus:ring-app-pink focus:border-app-pink focus:z-10 sm:text-sm', placeholder: 'Password confirmation' %>
         </div>
       </div>
       <div>
         <%= button_tag class: 'group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-app-pink focus:ring-opacity-50' do %>
-          Registro de usuario
+          Sign Up
           <span class='absolute left-0 inset-y-0 flex items-center pl-3'>
             <svg class='h-5 w-5 text-white-500' aria-hidden='true' fill='currentColor' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'>
               <path clip-rule="evenodd" d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z" fill-rule="evenodd"></path>
@@ -39,7 +39,7 @@
     <% end %>
     <div>
       <div class='p-1 text-center rounded-md border border-app-pink'>
-        Ya tienes perfil?
+        You already have a profile?
         <%= link_to('Sign in', new_user_session_path, { class: 'font-medium text-app-pink hover:text-opacity-80  cursor-pointer' }) %>
       </div>
     </div>
