--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -12,7 +12,19 @@
 
   <body>
     <div class="bg-gray-50 font-roboto">
-      <%= render partial: 'shared/navbar_no_login', locals: {user: @user} %>
+      <header class="w-full h-16 fixed top-0 z-10 bg-white shadow-md">
+        <div class="max-w-7xl mx-auto">
+          <div class="grid grid-cols-12 gap-1 px-4 h-16">
+            <div class="col-span-3">
+              <div class="h-full flex items-center">
+                <div class="w-16 h-10 flex items-center justify-center rounded-md bg-app-pink font-happy-monkey text-white md:h-11">
+                  H&C
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
       <div class="mt-16 max-w-7xl mx-auto">
         <div class="grid grid-cols-12 gap-1 px-4">
           <main class="col-span-full">
