--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,15 +1,15 @@
 <div class='container mx-auto px-4 py-6'>
   <%= render( partial: 'shared/page_heading',
-              locals: { title: 'Perfil' } ) %>
+              locals: { title: 'Profile' } ) %>
   <%= form_with(url: update_status_user_profile_path(@profile.user), scope: :profile, local: true) do |f| %>
     <div class='md:grid md:grid-cols-3 md:gap-6'>
       <div class='md:col-span-1'>
         <div class='px-4 sm:px-0'>
           <h3 class='text- font-medium leading-6 text-gray-900'>
-            Publicar
+            Publish
           </h3>
           <p class="mt-1 text-sm text-gray-600">
-            Podras hacer publico tu perfil para recibir reconocimientos cuando lo hayas completado y hayas agregado una cuenta bancaria a tu cuenta.
+            You can make your profile public to receive recognition when you have completed it and added a bank account to your account.
           </p>
         </div>
       </div>
@@ -21,7 +21,7 @@
               <div class='col-span-6'>
                 <%= f.hidden_field :public, value: !@profile.public %>
                 <div class="text-left md:text-right">
-                  <%= f.submit(@profile.public ? 'Despublicar' : 'Publicar', class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer #{'bg-opacity-60 pointer-events-none' unless @profile.publishable?}", disabled: !@profile.publishable?, data: { disable_with: 'Por favor espere...' }) %>
+                  <%= f.submit(@profile.public ? 'Unpublish' : 'Publish', class: "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer #{'bg-opacity-60 pointer-events-none' unless @profile.publishable?}", disabled: !@profile.publishable?, data: { disable_with: 'Por favor espere...' }) %>
                 </div>
               </div>
             </div>
@@ -43,10 +43,10 @@
       <div class='md:col-span-1'>
         <div class='px-4 sm:px-0'>
           <h3 class='text- font-medium leading-6 text-gray-900'>
-            Datos generales
+            General information
           </h3>
           <p class="mt-1 text-sm text-gray-600">
-            Agrega datos generales para que te conozcan mejor.
+            Add general data so that they know you better.
           </p>
         </div>
       </div>
@@ -56,18 +56,18 @@
           <div class='px-4 py-5 bg-white sm:p-6'>
             <div class='grid grid-cols-6 gap-6'>
               <div class='col-span-6'>
-                <%= f.label :full_name, 'Nombre completo', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.label :full_name, 'Full name', { class: 'block text-sm font-medium text-gray-700' } %>
                 <%= f.text_field :full_name, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md',
-                                          placeholder: 'Nombre completo',
+                                          placeholder: 'Enter your full name',
                                           required: true } %>
               </div>
               <div class='col-span-6 sm:col-span-4'>
-                <%=  f.label :occupation, 'Ocupación', { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :occupation, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Ocupación', required: true } %>
+                <%=  f.label :occupation, 'Occupation', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :occupation, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Enter your Occupation', required: true } %>
               </div>
               <div class='col-span-6'>
-                <%= f.label :biography, 'Biografria', { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_area :biography, { class: 'shadow-sm focus:ring-app-pink focus:border-app-pink mt-1 block w-full sm:text-sm border-gray-300 rounded-md',placeholder: 'Biografia', rows: 8 } %>
+                <%= f.label :biography, 'Biography', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_area :biography, { class: 'shadow-sm focus:ring-app-pink focus:border-app-pink mt-1 block w-full sm:text-sm border-gray-300 rounded-md',placeholder: 'Enter your little biography', rows: 8 } %>
               </div>
             </div>
           </div>
@@ -86,10 +86,10 @@
       <div class='md:col-span-1'>
         <div class='px-4 sm:px-0'>
           <h3 class='text- font-medium leading-6 text-gray-900'>
-            Imagen del perfil
+            Profile picture
           </h3>
           <p class="mt-1 text-sm text-gray-600">
-            Agrega una imagen que identifique tu perfil.
+            Add an image that identifies your profile.
           </p>
         </div>
       </div>
@@ -121,10 +121,10 @@
       <div class='md:col-span-1'>
         <div class='px-4 sm:px-0'>
           <h3 class='text- font-medium leading-6 text-gray-900'>
-            Valor del café a recibir
+            Value of the coffee to receive
           </h3>
           <p class="mt-1 text-sm text-gray-600">
-            Configure el valor del café que recibira como reconocimiento.
+            Set the value of the coffee you will receive as recognition.
           </p>
         </div>
       </div>
@@ -134,12 +134,12 @@
           <div class='px-4 py-5 bg-white sm:p-6'>
             <div class='grid grid-cols-6 gap-6'>
               <div class="col-span-6 sm:col-span-4">
-                <%= f.label :amount_coffee, 'Monto del café', { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.number_field :amount_coffee, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md',step: 0.01, min: 0.01, placeholder: 'Monto del café', required: true } %>
+                <%= f.label :amount_coffee, 'Amount of coffee', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.number_field :amount_coffee, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md',step: 0.01, min: 0.01, placeholder: 'Enter amount of coffee', required: true } %>
               </div>
               <div class="col-span-6 sm:col-span-4">
-                <%=  f.label :currency_symbol, 'Simbolo del la moneda', { class: 'block text-sm font-medium text-gray-700' } %>
-                <%= f.text_field :currency_symbol, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Simbolo del la moneda', required: true } %>
+                <%=  f.label :currency_symbol, 'Coin symbol', { class: 'block text-sm font-medium text-gray-700' } %>
+                <%= f.text_field :currency_symbol, { class: 'mt-1 focus:ring-app-pink focus:border-app-pink block w-full shadow-sm sm:text-sm border-gray-300 rounded-md', placeholder: 'Enter coin symbol', required: true } %>
               </div>
             </div>
           </div>
@@ -149,7 +149,7 @@
 
 
     <div class='px-4 py-3 bg-gray-50 text-right sm:px-6'>
-      <%= f.submit('Actualizar', { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
+      <%= f.submit(nil, { class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer', data: { disable_with: 'Por favor espere...' } }) %>
     </div>
   <% end %>
 </div> 
