--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full h-full min-h-screen-without-navbar">
+<div class="w-full h-full min-h-screen-without-navbar py-4">
   <div class="py-4">
     <%= @profile.biography %>
   </div>
@@ -10,8 +10,8 @@
   </div>
 
   <div class="flex justify-center mt-10">
-    <%= link_to("Dar reconocimiento a #{@profile.first_name}",
+    <%= link_to("Give recognition to #{@profile.first_name}",
                 new_user_acknowledgment_path(@profile.user),
-                class: 'w-full sm:max-w-md md:max-w-2xl  inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer') %>
+                class: 'w-full sm:max-w-md md:max-w-2xl  inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-app-pink hover:bg-opacity-80 focus:outline-none focus:ring-2 focus:ring-offset-2  focus:ring-app-pink focus:ring-opacity-50 cursor-pointer mb-4') %>
   </div>
 </div>
