--- a/app/views/shared/_empty_state_list.html.erb
+++ b/app/views/shared/_empty_state_list.html.erb
@@ -1,5 +1,5 @@
 <div class="p-4 flex justify-center items-center sm:py-10">
   <p>
-    No hay resgistros disponibles
+    No records available.
   </p>
 </div>
