🚑️ Fix center biography text

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <div class="w-full h-full min-h-screen-without-navbar py-4">
-  <div class="py-4">
+  <div class="py-4 text-center">
     <%= @profile.biography %>
   </div>
   <div class="w-full mt-4">
